2001-10-07  Rodrigo Moya <rodrigo@gnome-db.org>

	* Makefile.am: install headers in version-based directory

2001-09-13  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-field.c:
	* gda-export.c: adapted to changes in GdaField class

2001-09-06  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-field.[ch]: cleaned up API and make it match with the new
	GdaField API in the GNOME 2 branch

2001-09-05  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-connection.c (gda_connection_open): don't pass NULL strings
	to the CORBA-generated functions

2001-09-02  Liam Girdwood <liam@novalinux.com>

	* gda-recordset.[ch] (gda_recordset_get_row):
	(gda_recordset_get_row_as_string): new functions

2001-08-14  Diego Gonzalez <dggonz@yahoo.com>

	* gda-recordset.c (gda_recordset_to_array): new function to convert
	a whole recordset into a GPtrArray

2001-07-29  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-export.c (gda_export_run): add a GdaExportFlags parameter for
	clients to be able to specify several flags for the export process,
	such as export table data or not
	(run_export_cb): increment num_found to know how many objects were
	treated in one pass, and if 0, finish the export process

2001-07-29  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-export.c (gda_export_run, gda_export_stop): implemented the
	functions to run (asynchronously) the export process. When finished,
	the GdaExport will emit its "finished" signal

2001-07-25  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-export.c (gda_export_select_table_list): new function

2001-07-24  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-recordset.c (gda_recordset_move_prev): implemented

	* gda-export.c (gda_export_init): create the internal hash table
	here

2001-07-21  Rodrigo Moya <rodrigo@gnome-db.org>

	* *.h: s/#if defined(__cplusplus).../G_BEGIN_END_DECLS

2001-07-16  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-connection-pool.c: add a new parameter to the "error" signal
	to receive the list of errors from the connection
